<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_MergeType" Id="{11ff7a5b-35c4-03c5-123c-fd6e3f92afba}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MergeType :
(
	NoMerge := 0,
	FlyingMergeMoveOnTrack,
	FlyingMergeMoveSyncd,
	MergeFromStaticSyncd
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>