<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="MoverSort" Id="{9403c367-f397-4377-a1bb-d63ff440ec18}">
    <Declaration><![CDATA[TYPE MoverSort :
STRUCT
	MoverNumber : UDINT;
	TrackID : PlanarTrackOTCID;
	MoverPos : LREAL;
	MoverTrackNr : UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>