<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_PlanarXtsMover" Id="{e98e5f10-cdde-43fc-96da-1ae5f511366a}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_PlanarXtsMover

VAR_INPUT
	iTcIoXtsXpuMover			: REFERENCE TO Tc3_XTS_Utility.I_TcIoXtsXpuMover;
END_VAR

VAR
	nMoverId			    		: UDINT;

	_McPlanarMover				: Tc3_Mc3PlanarMotion.MC_PlanarMover;
	_PlanarTrail    			: Tc3_Mc3PlanarMotion.MC_PlanarTrackTrail;

	stXtsPositionInfo			: Tc3_XTS_Utility.ST_PositionInfo;
	
	MoverPhysics					: Tc3_Physics.PositionXYC;

	Mover				        	: MoverSort;
	CmdDivert							: BOOL;
	eMerge								: E_MergeType;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="Methods" Id="{497e6300-3e6d-49b8-a318-13b94b960f56}" />
    <Folder Name="Properties" Id="{bafe569f-b5f0-4de9-ae48-854cd11ccd2e}" />
    <Property Name="IsCommandedInShortcut" Id="{e5e69e7e-f163-4728-82da-b10e582ce622}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY IsCommandedInShortcut : BOOL]]></Declaration>
      <Get Name="Get" Id="{7a71ba46-249d-415a-b1f4-f1c52c07bed0}">
        <Declaration><![CDATA[VAR
	nCounter: UDINT := 0;
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[_mcPlanarMover.GetTrackTrailInformation(_PlanarTrail);

IF _PlanarTrail.Error OR _PlanarTrail.Size < 1 THEN
   IsCommandedInShortcut := FALSE;
   RETURN;
END_IF
   
FOR nCounter := 0 TO _PlanarTrail.Size - 1 DO
	IF _PlanarTrail.GetTrackOidAt(nCounter) = GVL_Mc3.MC_Tracks[E_TrackNum.Small].MCTOPLC_STD.TrackOID  THEN
		IsCommandedInShortcut := TRUE;
		RETURN;
	END_IF
END_FOR

IsCommandedInShortcut := FALSE;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="JoinTrack" Id="{fd819ce6-c064-4bae-aa84-926325f13c12}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD JoinTrack

VAR_INPUT
	feedback: REFERENCE TO MC_PlanarFeedback;
END_VAR

VAR_IN_OUT
	track: MC_PlanarTrack;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_McPlanarMover.JoinTrack(feedback, track, 0, 0);]]></ST>
      </Implementation>
    </Method>
    <Property Name="McPlanarMover" Id="{79d72b75-52b9-47c8-886e-5e60276bf5f1}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY McPlanarMover : REFERENCE TO MC_PlanarMover]]></Declaration>
      <Get Name="Get" Id="{71cad725-c4c4-49c5-9410-cee17b681f5a}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[McPlanarMover REF= _McPlanarMover;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="P_CmdDivert" Id="{8cede827-2b25-094d-2c84-715767aaf20f}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY P_CmdDivert : REFERENCE TO BOOL]]></Declaration>
      <Get Name="Get" Id="{ee22a2e2-25c9-085f-3a80-3e499cb6195c}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_CmdDivert	REF= CmdDivert;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="P_eMerge" Id="{5698d2c6-a9ba-0594-1fa9-f7ecaefdee80}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY P_eMerge : REFERENCE TO E_MergeType]]></Declaration>
      <Get Name="Get" Id="{b80825a0-b14e-0969-14a3-bf841bda528e}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_eMerge	REF= eMerge;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="P_MoverId" Id="{033bc7d6-a908-0af3-1630-2fc499f56ad8}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY P_MoverId : UDINT]]></Declaration>
      <Get Name="Get" Id="{c0e5d564-a073-06e0-3bca-52836c21275c}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_MoverId	:= nMoverId;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{ff03ecba-f79d-0c21-3b65-7c6a4248584c}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[nMoverId := P_MoverId;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="P_MoverPhysics" Id="{056b1259-392a-0821-097b-b08bee10a569}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY P_MoverPhysics : REFERENCE TO Tc3_Physics.PositionXYC]]></Declaration>
      <Get Name="Get" Id="{e7ba31e5-6730-0d69-35c1-51b7d57fd5fd}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_MoverPhysics	REF= MoverPhysics;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="P_PlanarMover" Id="{a5ac8d37-9108-0740-305c-d3b342270158}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY P_PlanarMover : REFERENCE TO MoverSort]]></Declaration>
      <Get Name="Get" Id="{bae1975d-f945-0652-3748-976b73c4f7d6}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_PlanarMover	REF= Mover;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="P_TrackConfig" Id="{e32b61fd-1607-0d8a-3b00-a92d697c1e42}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY P_TrackConfig : REFERENCE TO ST_TrackConfig]]></Declaration>
      <Get Name="Get" Id="{f2020383-ba74-08e6-01f4-c80f3d2580af}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="P_XtsPositionInfo" Id="{eee46ce5-009e-038a-12e5-cdbf8f2886af}" FolderPath="Properties\">
      <Declaration><![CDATA[PROPERTY P_XtsPositionInfo : REFERENCE TO Tc3_XTS_Utility.ST_PositionInfo]]></Declaration>
      <Get Name="Get" Id="{58ff9574-093b-05dd-3592-27328f83735e}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_XtsPositionInfo	REF= stXtsPositionInfo;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="Update" Id="{2a189ea7-97f2-4dc0-980a-fdde9c091766}" FolderPath="Methods\">
      <Declaration><![CDATA[METHOD Update : PVOID]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF iTcIoXtsXpuMover <> Tc3_Module.NULL THEN
  stXtsPositionInfo	:= iTcIoXtsXpuMover.GetPositionInfo();
END_IF

_mcPlanarMover.Update();

_mcPlanarMover.GetTrackTrailInformation(_PlanarTrail);

Mover.MoverNumber 	:= nMoverId;
Mover.MoverPos    	:= _McPlanarMover.MCTOPLC.SETONTRACK.SetPos;
Mover.TrackID     	:= _McPlanarMover.MCTOPLC.SETONTRACK.TrackOID;
//MoverPhysics		:= 

{warning <'Method Not Called'>}
//_M_UpdateStatus();

IF _PlanarTrail.Error OR _PlanarTrail.Size <= 1 THEN
   RETURN;
END_IF

IF iTcIoXtsXpuMover <> Tc3_Module.NULL THEN
  //SmallCircle
  IF _PlanarTrail.GetTrackOidAt(1) = MC_Tracks[E_TrackNum.Small].MCTOPLC_STD.TrackOID   THEN
    iTcIoXtsXpuMover.SetActiveTrackObjectId(XtsCompleteTrackInnerOID);
  //BigCircle
  ELSIF _PlanarTrail.GetTrackOidAt(1) =MC_Tracks[E_TrackNum.Big].MCTOPLC_STD.TrackOID THEN
    iTcIoXtsXpuMover.SetActiveTrackObjectId(XtsCompleteTrackOuterOID);
  END_IF
END_IF

]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>